more changes to file structures

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <script src="scripts/app.js"></script>
 </head>
 
-<body  ng-app="Gapp">
+<body  ng-app="BookApp">
 
 
     <section class="header">
