--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,12 @@
     <title>Book Share</title>
     <link rel="stylesheet" href="style/reset.css" type="text/css">
     <link rel="stylesheet" href="style/style.css" type="text/css">
-    <script src="vendor/angular/angular.js"></script>
-    <script src="vendor/angular-animate/angular-animate.js"></script>
-    <script src="vendor/jquery/dist/jquery.js"></script>
-    <script src="scripts/app.js"></script>
+    <!--<script src="vendor/angular/angular.js"></script>-->
+    <!--<script src="vendor/angular-animate/angular-animate.js"></script>-->
+    <!--<script src="vendor/jquery/dist/jquery.js"></script>-->
+    <script src="scripts/vendor.bundle.js"></script>
+    <script src="scripts/books.bundle.js"></script>
+    <!--<script src="scripts/app.js"></script>-->
 </head>
 
 <body  ng-app="bookApp">
