--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <!--<script src="vendor/jquery/dist/jquery.js"></script>-->
     <script src="scripts/vendor.bundle.js"></script>
     <script src="scripts/books.bundle.js"></script>
+    <script src="scripts/getBooks.js"></script>
     <!--<script src="scripts/app.js"></script>-->
 </head>
 
