--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
     <!--<script src="vendor/angular-animate/angular-animate.js"></script>-->
     <!--<script src="vendor/jquery/dist/jquery.js"></script>-->
     <script src="scripts/vendor.bundle.js"></script>
-    <script src="scripts/books.bundle.js"></script>
-    <script src="scripts/getBooks.js"></script>
-    <!--<script src="scripts/app.js"></script>-->
+    <!--<script src="scripts/books.bundle.js"></script>-->
+    <!--<script src="scripts/getBooks.js"></script>-->
+    <script src="scripts/app.js"></script>
 </head>
 
 <body  ng-app="bookApp">
@@ -66,6 +66,7 @@
         </div>
     </section>
 
-
+<img src="http://covers.openlibrary.org/b/isbn/9780553213508-M.jpg" />
+<!--I can get the image from the site by using the isbn and this link.-->
 </body>
 </html>
