--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <section class="book-container" ng-controller="mainCtrl as main">
         <div class="inner-book-container" ng-repeat="book in books">
             <div class="photo-container">
-                <img class="book-image" ng-src="{{book.link}}" />
+                <img class="book-image" ng-src="{{book.image}}" />
             </div>
             <div class="info-container">
 
