Reworking the structure

--- a/public/index.html
+++ b/public/index.html
@@ -8,31 +8,31 @@
     <!--<script src="vendor/angular/angular.js"></script>-->
     <!--<script src="vendor/angular-animate/angular-animate.js"></script>-->
     <!--<script src="vendor/jquery/dist/jquery.js"></script>-->
-    <script src="scripts/vendor.bundle.js"></script>
+    <!--<script src="scripts/vendor.bundle.js"></script>-->
+    <!--<script src="scripts/app.js"></script>-->
     <!--<script src="scripts/books.bundle.js"></script>-->
     <!--<script src="scripts/getBooks.js"></script>-->
-    <script src="scripts/app.js"></script>
 </head>
 
 <body  ng-app="bookApp">
 
 
-    <section class="header">
-        <ul>
-            <li>
-                <a href="">Home</a>
-            </li>
-            <li>
-                <a href="">Genre</a>
-            </li>
-            <li>
-                <a href="">Recommendations</a>
-            </li>
-            <li>
-                <a href="">Account</a>
-            </li>
-        </ul>
-    </section>
+    <!--<section class="header">-->
+        <!--<ul>-->
+            <!--<li>-->
+                <!--<a href="">Home</a>-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--<a href="">Genre</a>-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--<a href="">Recommendations</a>-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--<a href="">Account</a>-->
+            <!--</li>-->
+        <!--</ul>-->
+    <!--</section>-->
 
 
     <section class="book-container" ng-controller="mainCtrl as main">
@@ -70,7 +70,11 @@
         </div>
     </section>
 
+    <div id="stupid"></div>
+
 <img src="http://covers.openlibrary.org/b/isbn/9780553213508-M.jpg" />
 <!--I can get the image from the site by using the isbn and this link.-->
+    <script src="scripts/vendor.bundle.js"></script>
+    <script src="scripts/app.js"></script>
 </body>
 </html>
