I can delete now!

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,12 @@
         </div>
         <p class="username">Thomas Conto</p>
         <img class="user-photo" src="img/user.jpg" />
+
+        <form ng-submit="deleteBook(book)">
+          Delete:
+          <input  type="submit" value="Submit">
+        </form>
+
       </div>
     </div>
   </section>
