save book not books

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Book Share</title>
     <link rel="stylesheet" href="style/reset.css" type="text/css">
-    <link rel="stylesheet" href="style/style.css" type="text/css">
+    <link rel="stylesheet" href="style/main.css" type="text/css">
 
 </head>
 
