everything is in the public folder now

--- a/public/index.html
+++ b/public/index.html
@@ -14,15 +14,16 @@
 
   <bs-display-books></bs-display-books>
 
+  <script src="vendor/jquery.js"></script>
   <script src="vendor/angular.min.js"></script>
   <script src="vendor/angular-animate.js"></script>
-  <script src="vendor/jquery.js"></script>
-  <script src="../app/app.js"></script>
-  <script src="../app/scripts/controllers/displayBooks.controller.js"></script>
-  <script src="../app/scripts/controllers/navigation.js"></script>
-  <script src="../app/scripts/directives/bsNavigation.js"></script>
-  <script src="../app/scripts/directives/bsDisplayBooks.js"></script>
-  <script src="../app/scripts/services/dataService.js"></script>
+  <script src="vendor/angular-route.min.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/controllers/displayBooks.controller.js"></script>
+  <script src="js/controllers/nav.controller.js"></script>
+  <script src="js/directives/bsNavigation.js"></script>
+  <script src="js/directives/bsDisplayBooks.js"></script>
+  <script src="js/services/dataService.js"></script>
 
 </body>
 </html>
