working on the files structure

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>Book Share</title>
     <link rel="stylesheet" href="style/reset.css" type="text/css">
     <link rel="stylesheet" href="style/main.css" type="text/css">
+    <base href="/">
 
 </head>
 
@@ -18,12 +19,12 @@
   <script src="vendor/angular.min.js"></script>
   <script src="vendor/angular-animate.js"></script>
   <script src="vendor/angular-route.min.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/controllers/displayBooks.controller.js"></script>
-  <script src="js/controllers/nav.controller.js"></script>
-  <script src="js/directives/bsNavigation.js"></script>
-  <script src="js/directives/bsDisplayBooks.js"></script>
-  <script src="js/services/dataService.js"></script>
+  <script src="app/app.js"></script>
+  <script src="app/bookDisplay/displayBooks.controller.js"></script>
+  <script src="app/navigation/nav.controller.js"></script>
+  <script src="app/navigation/bsNavigation.js"></script>
+  <script src="app/bookDisplay/bsDisplayBooks.js"></script>
+  <script src="app/services/dataService.js"></script>
 
 </body>
 </html>
