--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,13 @@
   <script src="vendor/angular-route.min.js"></script>
   <script src="app/app.js"></script>
   <script src="app/bookDisplay/displayBooks.controller.js"></script>
+  <script src="app/authorization/register/register.controller.js"></script>
+  <script src="app/authorization/login/login.controller.js"></script>
   <script src="app/navigation/nav.controller.js"></script>
   <script src="app/navigation/bsNavigation.js"></script>
   <script src="app/bookDisplay/bsDisplayBooks.js"></script>
-  <script src="app/services/dataService.js"></script>
+  <script src="app/common/services/data.service.js"></script>
+  <script src="app/common/services/authentication.service.js"></script>
 
 </body>
 </html>
