--- a/public/app/bookDisplay/bsDisplayBooks.html
+++ b/public/app/bookDisplay/bsDisplayBooks.html
@@ -1,5 +1,5 @@
 <section class="book-container">
-
+  <script>alert('hi');</script>
   <form ng-submit="display.searchBook(newBook)" style="margin-left: 5%;">
     Book name: <input [ng-value="{{newBook}}"] ng-model="newBook" name="bookTitle">
     {{newBook}}
