setting up different views

--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,13 @@
     <base href="/">
     <link rel="stylesheet" href="style/reset.css" type="text/css">
     <link rel="stylesheet" href="style/main.css" type="text/css">
+    <link rel="stylesheet" href="style/home.style.css" type="text/css">
 
 </head>
 
 <body ng-app="bookApp">
 
   <div ng-view></div>
-
-    <bs-navigation></bs-navigation>
-
-    <bs-display-books></bs-display-books>
-
 
   <script src="vendor/jquery.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
