--- a/public/app/navigation/bsNavigation.html
+++ b/public/app/navigation/bsNavigation.html
@@ -1,10 +1,10 @@
-<section class="header">
+<section class="header" ng-controller="NavController as nav">
   <ul>
     <li>
-      <a href="">Home</a>
+      <a href="" ng-click="nav.navigateHome()">Home</a>
     </li>
     <li>
-      <a href="">Genre</a>
+      <a href="" ng-click="nav.navigateBooks()">Books</a>
     </li>
     <li>
       <a href="">Recommendations</a>
