adding login and register

--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -5,12 +5,21 @@
 
   <div class="home-title-section">
     Welcome to the Book Share!
+
+    <a ng-href="/login">
+      <div class="log-in-btn">
+        Log In
+      </div>
+    </a>
+
+    <a ng-href="/register">
+      <div class="sign-up-btn">
+        Sign Up
+      </div>
+    </a>
+
   </div>
 
-  <a href="">
-    <div class="log-in-btn">
-      Log-In
-    </div>
-  </a>
+
 
 </section>
