--- a/public/app/authorization/register/register.view.html
+++ b/public/app/authorization/register/register.view.html
@@ -1,15 +1,15 @@
-<form ng-submit="vm.onSubmit()">
-  <div class="form-group">
+<form ng-submit="register.onSubmit()">
+  <div>
     <label for="name">Full name</label>
-    <input type="text" class="form-control" id="name" placeholder="Enter your name" ng-model="vm.credentials.name">
+    <input type="text"id="name" placeholder="Enter your name" ng-model="register.credentials.name">
   </div>
-  <div class="form-group">
+  <div>
     <label for="email">Email address</label>
-    <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="vm.credentials.email">
+    <input type="email" id="email" placeholder="Enter email" ng-model="register.credentials.email">
   </div>
-  <div class="form-group">
+  <div>
     <label for="password">Password</label>
-    <input type="password" class="form-control" id="password" placeholder="Password" ng-model="vm.credentials.password">
+    <input type="password" id="password" placeholder="Password" ng-model="register.credentials.password">
   </div>
-  <button type="submit" class="btn btn-default">Register!</button>
+  <button type="submit">Register!</button>
 </form>
