--- a/public/app/navigation/bsNavigation.html
+++ b/public/app/navigation/bsNavigation.html
@@ -13,4 +13,27 @@
       <a href="">Account</a>
     </li>
   </ul>
+
+  <div class="nav-login">
+    <form
+      ng-submit="login.logUserOn()"
+      ng-controller="LoginController as login"
+      ng-hide="login.sessionToken"
+      >
+
+      <div >
+        <input type="email" id="email" placeholder="Enter email" ng-model="login.credentials.email">
+        <input type="password"  id="password" placeholder="Password" ng-model="login.credentials.password">
+        <button type="submit">Sign in!</button>
+      </div>
+    </form>
+
+    <form
+      ng-submit="login.logUserOut()"
+      ng-controller="LoginController as login"
+      ng-show="login.sessionToken"
+      >
+      <button type="submit">Log Out</button>
+    </form>
+  </div>
 </section>
