--- a/public/app/bookDisplay/bsDisplayBooks.html
+++ b/public/app/bookDisplay/bsDisplayBooks.html
@@ -1,7 +1,6 @@
 <section class="book-container">
   <form ng-submit="display.searchBook(newBook)" style="margin-left: 5%;">
-    Book name: <input [ng-value="{{newBook}}"] ng-model="newBook" name="bookTitle">
-    {{newBook}}
+    Search Book name: <input [ng-value="{{newBook}}"] ng-model="newBook" name="bookTitle">
     <input  type="submit" value="Submit">
   </form>
 
@@ -35,7 +34,7 @@
       <img class="user-photo" src="img/user.jpg" />
 
       <form ng-submit="display.deleteBook(book)" class="delete-book-btn">
-      <input  type="submit" value="Delete">
+        <input  type="submit" value="Delete">
       </form>
     </div>
   </div>
