--- a/public/app/navigation/bsNavigation.html
+++ b/public/app/navigation/bsNavigation.html
@@ -4,22 +4,18 @@
       <a href="" ng-click="nav.navigateHome()">Home</a>
     </li>
     <li>
-      <a href="" ng-click="nav.navigateBooks()">Books</a>
+      <a href="" ng-click="nav.navigateBooks()">My Books</a>
     </li>
     <li>
-      <a href="">Recommendations</a>
+      <a href="">All Books</a>
     </li>
     <li>
       <a href="">Account</a>
     </li>
   </ul>
 
-  <div class="nav-login" >
-    <form
-      ng-submit="login.logUserOn()"
-      ng-controller="LoginController as login"
-      ng-hide="login.sessionToken"
-      >
+  <div class="nav-login" ng-controller="LoginController as login">
+    <form ng-submit="login.logUserOn()" ng-hide="login.sessionToken">
 
       <div>
         <input type="email" id="email" placeholder="Enter email" ng-model="login.credentials.email">
@@ -28,11 +24,7 @@
       </div>
     </form>
 
-    <form
-      ng-submit="login.logUserOut()"
-      ng-controller="LoginController as login"
-      ng-show="login.sessionToken"
-      >
+    <form ng-submit="login.logUserOut()" ng-show="login.sessionToken">
       <button type="submit">Log Out</button>
     </form>
   </div>
