--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
   <script src="app/navigation/nav.controller.js"></script>
   <script src="app/navigation/bsNavigation.js"></script>
   <script src="app/bookDisplay/bsDisplayBooks.js"></script>
+  <script src="app/bookDisplay/search/bsSearchBook.js"></script>
   <script src="app/common/services/data.service.js"></script>
   <script src="app/common/services/authentication.service.js"></script>
 
