--- a/public/app/navigation/bsNavigation.html
+++ b/public/app/navigation/bsNavigation.html
@@ -4,10 +4,10 @@
       <a href="" ng-click="nav.navigateHome()">Home</a>
     </li>
     <li>
-      <a href="" ng-click="nav.navigateBooks()" ng-show="nav.isLoggedIn">My Books</a>
+      <a href="" ng-click="nav.navigateUserBooks()" ng-show="nav.isLoggedIn">My Books</a>
     </li>
     <li>
-      <a href="">All Books</a>
+      <a href="" ng-click="nav.navigateAllBooks()">All Books</a>
     </li>
     <li>
       <a href="">Account</a>
