updating the displayBook views

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style/reset.css" type="text/css">
     <link rel="stylesheet" href="style/main.css" type="text/css">
     <link rel="stylesheet" href="style/home.style.css" type="text/css">
+    <link rel="stylesheet" href="style/displayBooks.style.css" type="text/css">
 
 </head>
 
@@ -23,7 +24,7 @@
   <script src="app/authorization/login/login.controller.js"></script>
   <script src="app/navigation/nav.controller.js"></script>
   <script src="app/navigation/bsNavigation.js"></script>
-  <script src="app/bookDisplay/bsDisplayBooks.js"></script>
+  <script src="app/bookDisplay/directive/bsDisplayBooks.js"></script>
   <script src="app/bookDisplay/search/bsSearchBook.js"></script>
   <script src="app/common/services/data.service.js"></script>
   <script src="app/common/services/authentication.service.js"></script>
