--- a/public/app/bookDisplay/search/bsSearchBook.html
+++ b/public/app/bookDisplay/search/bsSearchBook.html
@@ -1,4 +1,4 @@
-<form ng-submit="display.searchBook(newBook)" ng-show="display.isLoggedIn">
+<form class="search-book" ng-submit="display.searchBook(newBook)" ng-show="display.isLoggedIn">
   Search Book name: <input [ng-value="{{newBook}}"] ng-model="newBook" name="bookTitle">
   <input  type="submit" value="Submit">
 </form>
