jshinting the files

--- a/public/app/navigation/bsNavigation.html
+++ b/public/app/navigation/bsNavigation.html
@@ -10,7 +10,7 @@
       <a href="" ng-click="nav.navigateAllBooks()">All Books</a>
     </li>
     <li>
-      <a href="">Account</a>
+      <a href="" ng-click="nav.navigateAccount()">Account</a>
     </li>
   </ul>
 
