--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>Book Share</title>
     <base href="/">
     <link rel="stylesheet" href="style/reset.css" type="text/css">
-    <link rel="stylesheet" href="style/main.css" type="text/css">
+    <link rel="stylesheet" href="style/nav.style.css" type="text/css">
     <link rel="stylesheet" href="style/home.style.css" type="text/css">
     <link rel="stylesheet" href="style/displayBooks.style.css" type="text/css">
 
@@ -19,6 +19,7 @@
   <script src="vendor/angular-animate.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular-route.js"></script>
   <script src="app/app.js"></script>
+  <script src="app/account/account.controller.js"></script>
   <script src="app/bookDisplay/displayBooks.controller.js"></script>
   <script src="app/authorization/register/register.controller.js"></script>
   <script src="app/authorization/login/login.controller.js"></script>
