--- a/public/app/bookDisplay/userBooks.html
+++ b/public/app/bookDisplay/userBooks.html
@@ -1,5 +1,7 @@
 <bs-navigation></bs-navigation>
 
+<h1 class="book-display-title">All my books!</h1>
+
 <bs-search-book></bs-search-book>
 
 <bs-display-books></bs-display-books>
