--- a/public/index.html
+++ b/public/index.html
@@ -30,5 +30,9 @@
   <script src="app/common/services/data.service.js"></script>
   <script src="app/common/services/authentication.service.js"></script>
 
+  <!--<script src="js/vendor.bundle.js"></script>-->
+  <!--<script src="js/app.bundle.js"></script>-->
+
+
 </body>
 </html>
