--- a/public/index.html
+++ b/public/index.html
@@ -14,24 +14,8 @@
 
   <div ng-view></div>
 
-  <script src="vendor/jquery.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
-  <script src="vendor/angular-animate.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular-route.js"></script>
-  <script src="app/app.js"></script>
-  <script src="app/account/account.controller.js"></script>
-  <script src="app/bookDisplay/displayBooks.controller.js"></script>
-  <script src="app/authorization/register/register.controller.js"></script>
-  <script src="app/authorization/login/login.controller.js"></script>
-  <script src="app/navigation/nav.controller.js"></script>
-  <script src="app/navigation/bsNavigation.js"></script>
-  <script src="app/bookDisplay/directive/bsDisplayBooks.js"></script>
-  <script src="app/bookDisplay/search/bsSearchBook.js"></script>
-  <script src="app/common/services/data.service.js"></script>
-  <script src="app/common/services/authentication.service.js"></script>
-
-  <!--<script src="js/vendor.bundle.js"></script>-->
-  <!--<script src="js/app.bundle.js"></script>-->
+  <script src="js/vendor.bundle.js"></script>
+  <script src="js/app.bundle.js"></script>
 
 
 </body>
