--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,15 @@
 
   <div ng-view></div>
 
-  <script src="js/vendor.bundle.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
+  <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular-animate.js"></script>-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular-route.js"></script>
+  <script src="https://rawgit.com/dwmkerr/angular-modal-service/master/dst/angular-modal-service.js"></script>
+
   <script src="js/app.bundle.js"></script>
+
+
+
 
 </body>
 </html>
