working on modal patterns

--- a/public/app/bookDisplay/search/bsSearchModal.html
+++ b/public/app/bookDisplay/search/bsSearchModal.html
@@ -1,7 +1,5 @@
-<div style="    width: 80%;
-    height: 80vh;
-    background: green;
-    position: absolute;
-    z-index: 1;
-    top: 10vh;
-    left: 10%;">Nothing</div>
+<div class="modal-container">
+
+  <div class="modal-data-row"></div>
+
+</div>
