working on modals

--- a/public/app/bookDisplay/allBooks.html
+++ b/public/app/bookDisplay/allBooks.html
@@ -2,6 +2,6 @@
 
 <h1 class="book-display-title">View all available books!</h1>
 
-<!--<bs-search-book></bs-search-book>-->
+<bs-search-book></bs-search-book>
 
 <bs-display-books></bs-display-books>
