--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -4,7 +4,8 @@
 <section class="home-body">
 
   <div class="home-title-section">
-    Welcome to the Book Share!
+    <h1>Welcome to the Book Share!</h1>
+
 
     <a ng-href="/login">
       <div class="log-in-btn">
