--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Book Share</title>
     <base href="/">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="style/reset.css" type="text/css">
     <link rel="stylesheet" href="style/nav.style.css" type="text/css">
     <link rel="stylesheet" href="style/home.style.css" type="text/css">
@@ -15,13 +16,24 @@
   <div ng-view></div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
-  <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular-animate.js"></script>-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular-animate.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular-route.js"></script>
-  <script src="https://rawgit.com/dwmkerr/angular-modal-service/master/dst/angular-modal-service.js"></script>
-
-  <script src="js/app.bundle.js"></script>
+  <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.0.1.js"></script>
 
 
+  <!--<script src="js/app.bundle.js"></script>-->
+
+  <script src="app/app.js"></script>
+  <script src="app/account/account.controller.js"></script>
+  <script src="app/bookDisplay/displayBooks.controller.js"></script>
+  <script src="app/authorization/register/register.controller.js"></script>
+  <script src="app/authorization/login/login.controller.js"></script>
+  <script src="app/navigation/nav.controller.js"></script>
+  <script src="app/navigation/bsNavigation.js"></script>
+  <script src="app/bookDisplay/directive/bsDisplayBooks.js"></script>
+  <script src="app/bookDisplay/search/bsSearchBook.js"></script>
+  <script src="app/common/services/data.service.js"></script>
+  <script src="app/common/services/authentication.service.js"></script>
 
 
 
