got modal poping up and accepting data, just not styled yet

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
   <script src="app/navigation/nav.controller.js"></script>
   <script src="app/navigation/bsNavigation.js"></script>
   <script src="app/bookDisplay/directive/bsDisplayBooks.js"></script>
+  <script src="app/bookDisplay/bookModule.controller.js"></script>
   <script src="app/bookDisplay/search/bsSearchBook.js"></script>
   <script src="app/common/services/data.service.js"></script>
   <script src="app/common/services/authentication.service.js"></script>
