--- a/public/app/bookDisplay/bookModal.html
+++ b/public/app/bookDisplay/bookModal.html
@@ -1,33 +1,8 @@
-<div style="width: 100%; height: 100vh; background: red;">
+<div style="padding: 5%; width: 100%; height: 90vh; background: #fefefe;" >
 
-  {{data}}
-
+  <div style="width: 50%; height: 15%; float: left; border: 1px solid #ddd; padding: 1%;" ng-repeat="data in modal.data">
+    Title: {{data.title}}
+    <img style="height: 100%;" ng-src="{{'http://covers.openlibrary.org/b/isbn/' + data.isbn[0] + '-M.jpg'}}" />
+  </div>
 
 </div>
-
-
-
-<!--<div ng-controller="ModalDemoCtrl as $ctrl">-->
-  <!--<script type="text/ng-template" id="myModalContent.html">-->
-    <!--<div class="modal-header">-->
-      <!--<h3 class="modal-title" id="modal-title">I'm a modal!</h3>-->
-    <!--</div>-->
-    <!--<div class="modal-body" id="modal-body">-->
-      <!--<ul>-->
-        <!--<li ng-repeat="item in $ctrl.items">-->
-          <!--<a href="#" ng-click="$event.preventDefault(); $ctrl.selected.item = item">{{ item }}</a>-->
-        <!--</li>-->
-      <!--</ul>-->
-      <!--Selected: <b>{{ $ctrl.selected.item }}</b>-->
-    <!--</div>-->
-    <!--<div class="modal-footer">-->
-      <!--<button class="btn btn-primary" type="button" ng-click="$ctrl.ok()">OK</button>-->
-      <!--<button class="btn btn-warning" type="button" ng-click="$ctrl.cancel()">Cancel</button>-->
-    <!--</div>-->
-  <!--</script>-->
-
-  <!--<button type="button" class="btn btn-default" ng-click="$ctrl.open()">Open me!</button>-->
-  <!--<button type="button" class="btn btn-default" ng-click="$ctrl.open('lg')">Large modal</button>-->
-  <!--<button type="button" class="btn btn-default" ng-click="$ctrl.open('sm')">Small modal</button>-->
-  <!--<div ng-show="$ctrl.selected">Selection from a modal: {{ $ctrl.selected }}</div>-->
-<!--</div>-->
