--- a/public/app/bookDisplay/bookModal.html
+++ b/public/app/bookDisplay/bookModal.html
@@ -1,8 +1,10 @@
 <div style="padding: 5%; width: 100%; height: 90vh; background: #fefefe;" >
 
   <div style="width: 50%; height: 15%; float: left; border: 1px solid #ddd; padding: 1%;" ng-repeat="data in modal.data">
-    Title: {{data.title}}
-    <img style="height: 100%;" ng-src="{{'http://covers.openlibrary.org/b/isbn/' + data.isbn[0] + '-M.jpg'}}" />
+    <a href="#" ng-click="$event.preventDefault(); modal.bookSelected(data)">
+      Title: {{data.title}}
+      <img style="height: 100%;" ng-src="{{'http://covers.openlibrary.org/b/isbn/' + data.isbn[0] + '-M.jpg'}}" />
+    </a>
   </div>
 
 </div>
