--- a/public/app/bookDisplay/bookModal.html
+++ b/public/app/bookDisplay/bookModal.html
@@ -1,9 +1,13 @@
-<div style="padding: 5%; width: 100%; height: 90vh; background: #fefefe;" >
+<div class='modal-container'>
 
-  <div style="width: 50%; height: 15%; float: left; border: 1px solid #ddd; padding: 1%;" ng-repeat="data in modal.data">
-    <a href="#" ng-click="$event.preventDefault(); modal.bookSelected(data)">
-      Title: {{data.title}}
-      <img style="height: 100%;" ng-src="{{'http://covers.openlibrary.org/b/isbn/' + data.isbn[0] + '-M.jpg'}}" />
+  <div class="modal-book" ng-repeat="bookData in modal.data">
+
+    <a href="#" ng-click="$event.preventDefault(); modal.bookSelected(bookData)">
+
+      Title: {{bookData.title}}
+
+      <img style="height: 100%;" ng-src="{{'http://covers.openlibrary.org/b/isbn/' + bookData.isbn[0] + '-M.jpg'}}" />
+
     </a>
   </div>
 
