--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,10 @@
 <head>
     <title>Book Share</title>
     <base href="/">
+    <link href="https://fonts.googleapis.com/css?family=Prompt:400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="style/reset.css" type="text/css">
+    <link rel="stylesheet" href="style/main.css" type="text/css">
     <link rel="stylesheet" href="style/nav.style.css" type="text/css">
     <link rel="stylesheet" href="style/home.style.css" type="text/css">
     <link rel="stylesheet" href="style/displayBooks.style.css" type="text/css">
