--- a/public/app/bookDisplay/directive/bsDisplayBooks.html
+++ b/public/app/bookDisplay/directive/bsDisplayBooks.html
@@ -1,38 +1,62 @@
-<section class="book-container">
+<!--<section class="book-container">-->
 
-  <div class="inner-book-container" ng-repeat="book in display.books">
-    <div class="photo-container">
-      <img class="book-image" ng-src="{{book.image}}" />
-    </div>
-    <div class="info-container">
+  <!--<div class="inner-book-container" ng-repeat="book in display.books">-->
+    <!--<div class="photo-container">-->
+      <!--<img class="book-image" ng-src="{{book.image}}" />-->
+    <!--</div>-->
+    <!--<div class="info-container">-->
 
-      <h2 class="book-title">{{book.title}}</h2>
-      <p class="book-description">
-        {{book.description}}
-      </p>
-      <ul>
-        <li>
-          <a href="">Learn More</a>
-        </li>
+      <!--<h2 class="book-title">{{book.title}}</h2>-->
+      <!--<p class="book-description">-->
+        <!--{{book.description}}-->
+      <!--</p>-->
+      <!--<ul>-->
+        <!--<li>-->
+          <!--<a href="">Learn More</a>-->
+        <!--</li>-->
 
-        <li>
-          <a href="">Borrow</a>
-        </li>
-      </ul>
+        <!--<li>-->
+          <!--<a href="">Borrow</a>-->
+        <!--</li>-->
+      <!--</ul>-->
 
-      <div class="endorsement-container">
-        <img class="book-endorsements" src="img/heart.png" />
-        <p>{{book.likes}}</p>
-      </div>
-      <p class="username">Thomas Conto</p>
-      <img class="user-photo" src="img/user.jpg" />
+      <!--<div class="endorsement-container">-->
+        <!--<img class="book-endorsements" src="img/heart.png" />-->
+        <!--<p>{{book.likes}}</p>-->
+      <!--</div>-->
+      <!--<p class="username">Thomas Conto</p>-->
+      <!--<img class="user-photo" src="img/user.jpg" />-->
 
-      <form
-        ng-submit="display.deleteBook(book)"
-        class="delete-book-btn"
-        ng-hide="display.currentPage === '/allBooks'">
-        <input type="submit" value="Delete">
-      </form>
-    </div>
+      <!--<form-->
+        <!--ng-submit="display.deleteBook(book)"-->
+        <!--class="delete-book-btn"-->
+        <!--ng-hide="display.currentPage === '/allBooks'">-->
+        <!--<input type="submit" value="Delete">-->
+      <!--</form>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</section>-->
+
+
+<section class="vert-book-container">
+
+  <bs-search-book></bs-search-book>
+
+
+  <div class="vert-book" ng-repeat="book in display.books" >
+    <img class="vert-book-img" ng-src="{{book.image}}" title={{book.title}} />
+
+    <p class="vert-book-title">{{book.title}}</p>
+    <p class="vert-book-author">{{book.author}}</p>
+    <p class="vert-book-owner">Owner: {{book.owner}}</p>
+
+    <form
+    ng-submit="display.deleteBook(book)"
+    class="delete-book-btn"
+    ng-hide="display.currentPage === '/allBooks'">
+    <input type="submit" value="Delete">
+    </form>
+
   </div>
+
 </section>
