--- a/public/app/bookDisplay/userBooks.html
+++ b/public/app/bookDisplay/userBooks.html
@@ -2,6 +2,6 @@
 
 <h1 class="book-display-title">All my books!</h1>
 
-<bs-search-book></bs-search-book>
+<!--<bs-search-book></bs-search-book>-->
 
 <bs-display-books></bs-display-books>
