site is in process of being redesigned, slightly broken

--- a/public/app/bookDisplay/directive/bsDisplayBooks.html
+++ b/public/app/bookDisplay/directive/bsDisplayBooks.html
@@ -38,9 +38,12 @@
 <!--</section>-->
 
 
-<section class="vert-book-container">
+<!--<section class="vert-book-container">-->
 
-  <bs-search-book></bs-search-book>
+  <!--<bs-navigation></bs-navigation>-->
+
+
+  <!--<bs-search-book></bs-search-book>-->
 
 
   <div class="vert-book" ng-repeat="book in display.books" >
@@ -58,5 +61,7 @@
     </form>
 
   </div>
+<!---->
+<!--</section>-->
 
-</section>
+<!--<div style=" float: right; background: linear-gradient(to bottom, #000 0, #000 25%, transparent 25%, transparent 37.5%, #000 37.5%, #000 62.5%, transparent 62.5%, transparent 75%, #000 75%); height: 30px; width: 40px;"></div>-->
