--- a/public/app/bookDisplay/userBooks.html
+++ b/public/app/bookDisplay/userBooks.html
@@ -1,7 +1,11 @@
-<bs-navigation></bs-navigation>
+<section class="vert-book-container">
 
-<h1 class="book-display-title">All my books!</h1>
+  <bs-navigation></bs-navigation>
 
-<!--<bs-search-book></bs-search-book>-->
 
-<bs-display-books></bs-display-books>
+  <bs-search-book></bs-search-book>
+
+  <bs-display-books></bs-display-books>
+
+
+</section>
