--- a/public/app/bookDisplay/allBooks.html
+++ b/public/app/bookDisplay/allBooks.html
@@ -1,7 +1,15 @@
-<bs-navigation></bs-navigation>
 
-<h1 class="book-display-title">View all available books!</h1>
+<!--<bs-display-books></bs-display-books>-->
 
-<!--<bs-search-book></bs-search-book>-->
 
-<bs-display-books></bs-display-books>
+<section class="vert-book-container">
+
+  <bs-navigation></bs-navigation>
+
+
+  <bs-search-book></bs-search-book>
+
+  <bs-display-books></bs-display-books>
+
+
+</section>
