working on hamburger menu

--- a/public/app/bookDisplay/allBooks.html
+++ b/public/app/bookDisplay/allBooks.html
@@ -1,15 +1,9 @@
-
-<!--<bs-display-books></bs-display-books>-->
-
-
 <section class="vert-book-container">
 
   <bs-navigation></bs-navigation>
 
-
-  <bs-search-book></bs-search-book>
+  <div class="divider"></div>
 
   <bs-display-books></bs-display-books>
-
 
 </section>
