--- a/public/app/bookDisplay/userBooks.html
+++ b/public/app/bookDisplay/userBooks.html
@@ -2,10 +2,15 @@
 
   <bs-navigation></bs-navigation>
 
-
   <bs-search-book></bs-search-book>
 
   <bs-display-books></bs-display-books>
 
+</section>
+
+
+<section class="sidebar-container">
+
+  <bs-menu></bs-menu>
 
 </section>
