--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,8 @@
   <script src="app/authorization/login/login.controller.js"></script>
   <script src="app/navigation/nav.controller.js"></script>
   <script src="app/navigation/bsNavigation.js"></script>
+  <script src="app/navigation/menu/menu.controller.js"></script>
+  <script src="app/navigation/menu/bsMenu.js"></script>
   <script src="app/bookDisplay/directive/bsDisplayBooks.js"></script>
   <script src="app/bookDisplay/search/bsSearchBook.js"></script>
   <script src="app/bookDisplay/bookModal.controller.js"></script>
