user now able to re-log in... again

--- a/public/app/bookDisplay/allBooks.html
+++ b/public/app/bookDisplay/allBooks.html
@@ -2,7 +2,7 @@
 
   <bs-navigation></bs-navigation>
 
-  <div class="divider"></div>
+  <div class="section-divider"></div>
 
   <bs-display-books></bs-display-books>
 
