--- a/public/app/navigation/bsNavigation.html
+++ b/public/app/navigation/bsNavigation.html
@@ -2,13 +2,13 @@
   <a class="nav-logo" href='' ng-click='nav.navigateHome()'>BookShare</a>
   <ul>
     <li>
-      <a href='' ng-click='nav.navigateUserBooks()' ng-show='nav.isLoggedIn'>My Books</a>
+      <a href='/userBooks' ng-show='nav.isLoggedIn'>My Books</a>
     </li>
     <li>
-      <a href='' ng-click='nav.navigateAllBooks()'>All Books</a>
+      <a href='/allBooks' >All Books</a>
     </li>
     <li>
-      <a><!--href='' ng-click='nav.navigateGroups()'-->Groups</a>
+      <a>Groups</a>
     </li>
   </ul>
 </section>
