--- a/public/app/authorization/login/login.view.html
+++ b/public/app/authorization/login/login.view.html
@@ -1,4 +1,4 @@
-<form ng-submit="login.onSubmit()">
+<form ng-submit="login.logUserOn()">
   <div class="form-group">
     <label for="email">Email address</label>
     <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="login.credentials.email">
