--- a/public/app/navigation/menu/bsMenu.html
+++ b/public/app/navigation/menu/bsMenu.html
@@ -8,7 +8,7 @@
     <li role="menuitem"><a href="#">Account</a></li>
     <li role="menuitem"><a href="#">Create Invite</a></li>
     <li class="divider"></li>
-    <li role="menuitem"><a href="/login">Log In</a></li>
+    <li role="menuitem"><a href="/login" ng-hide='login.sessionToken'>Log In</a></li>
     <li role="menuitem"><a href="" ng-click='login.logUserOut()' ng-show='login.sessionToken'>Log Out</a></li>
   </ul>
 
