updated all books page

--- a/public/app/bookDisplay/allBooks.html
+++ b/public/app/bookDisplay/allBooks.html
@@ -1,3 +1,5 @@
+<div class="top-section-spacer"></div>
+
 <section class="vert-book-container">
 
   <bs-navigation></bs-navigation>
@@ -5,5 +7,11 @@
   <div class="section-divider"></div>
 
   <bs-display-books></bs-display-books>
+
+</section>
+
+<section class="sidebar-container">
+
+  <bs-menu></bs-menu>
 
 </section>
