working on adding sidebar widgets

--- a/public/app/navigation/bsNavigation.html
+++ b/public/app/navigation/bsNavigation.html
@@ -1,5 +1,5 @@
 <section class='header' ng-controller='NavController as nav'>
-  <a class="nav-logo" href='' ng-click='nav.navigateHome()'>BookShare</a>
+  <a class="nav-logo" href='/'>BookShare</a>
   <ul>
     <li>
       <a href='/userBooks' ng-show='nav.isLoggedIn'>My Books</a>
