--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,22 @@
   <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.0.1.js"></script>
 
 
-  <script src="js/app.bundle.js"></script>
+  <!--<script src="js/app.bundle.js"></script>-->
+
+  <script src="app/app.js"></script>
+  <script src="app/account/account.controller.js"></script>
+  <script src="app/bookDisplay/displayBooks.controller.js"></script>
+  <script src="app/authorization/register/register.controller.js"></script>
+  <script src="app/authorization/login/login.controller.js"></script>
+  <script src="app/navigation/nav.controller.js"></script>
+  <script src="app/navigation/bsNavigation.js"></script>
+  <script src="app/navigation/menu/bsMenu.js"></script>
+  <script src="app/bookDisplay/directive/bsDisplayBooks.js"></script>
+  <script src="app/bookDisplay/search/bsSearchBook.js"></script>
+  <script src="app/bookDisplay/bookModal.controller.js"></script>
+  <script src="app/common/services/data.service.js"></script>
+  <script src="app/common/services/authentication.service.js"></script>
+
 
 
 </body>
