updating the components on the side

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
   <script src="app/bookDisplay/search-modal/bookModal.controller.js"></script>
   <script src="app/components/monthly-books/bsMonthlyBooks.js"></script>
   <script src="app/components/total-books/bsTotalBooks.js"></script>
+  <script src="app/components/num-users/bsNumUsers.js"></script>
   <script src="app/components/components.controller.js"></script>
   <script src="app/common/services/data.service.js"></script>
   <script src="app/common/services/authentication.service.js"></script>
