hover effect on books

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <base href="/">
     <link href="https://fonts.googleapis.com/css?family=Prompt:400,700" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://use.fontawesome.com/ebf6e8673b.js"></script>
     <link rel="stylesheet" href="style/reset.css" type="text/css">
     <link rel="stylesheet" href="style/main.css" type="text/css">
     <link rel="stylesheet" href="style/nav.style.css" type="text/css">
     <link rel="stylesheet" href="style/home.style.css" type="text/css">
     <link rel="stylesheet" href="style/displayBooks.style.css" type="text/css">
-
 </head>
 
 <body ng-app="bookApp">
@@ -21,6 +21,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular-animate.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular-route.js"></script>
   <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.0.1.js"></script>
+
 
 
   <!--<script src="js/app.bundle.js"></script>-->
