--- a/public/app/bookDisplay/directive/bsDisplayBooks.html
+++ b/public/app/bookDisplay/directive/bsDisplayBooks.html
@@ -2,6 +2,8 @@
 <div class="vert-book" ng-repeat="book in display.books" >
   <img class="vert-book-img" ng-src="{{book.image}}" title={{book.title}} />
 
+  <div class="book-hover"></div>
+
   <p class="vert-book-title">{{book.title}}</p>
   <p class="vert-book-author">{{book.author}}</p>
   <p class="vert-book-owner">Owner: {{book.owner}}</p>
