--- a/public/app/navigation/bsNavigation.html
+++ b/public/app/navigation/bsNavigation.html
@@ -7,8 +7,8 @@
     <li ng-class='{currentPage: nav.url === "allBooks" }'>
       <a href='/allBooks' >All Books</a>
     </li>
-    <li ng-class='{currentPage: nav.url === "groups" }'>
-      <a>Groups</a>
+    <li ng-class='{currentPage: nav.url === "group" }'>
+      <a href='/group'>Group</a>
     </li>
   </ul>
 </section>
