--- a/public/app/group/bsGroup.html
+++ b/public/app/group/bsGroup.html
@@ -1,22 +1,20 @@
 <div class="top-section-spacer"></div>
+
 <section class="vert-book-container">
 
   <bs-navigation></bs-navigation>
 
-  <bs-search-book></bs-search-book>
-
-  <div ng-click="display.sortTitleAZ()">Sort A - Z</div>
+  <div class="section-divider"></div>
 
   <bs-display-books></bs-display-books>
 
 </section>
 
-
 <section class="sidebar-container">
 
   <bs-menu></bs-menu>
 
-  <bs-monthly-books></bs-monthly-books>
+  <bs-total-books></bs-total-books>
 
   <bs-num-users></bs-num-users>
 
