--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,10 @@
 
   <div ng-view></div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular-animate.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular-route.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-animate.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-route.js"></script>
   <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.0.1.js"></script>
-
 
 
   <!--<script src="js/app.bundle.js"></script>-->
@@ -41,9 +40,11 @@
   <script src="app/components/total-books/bsTotalBooks.js"></script>
   <script src="app/components/num-users/bsNumUsers.js"></script>
   <script src="app/components/components.controller.js"></script>
+  <script src="app/group/group.controller.js"></script>
+  <script src="app/group/bsGroup.js"></script>
   <script src="app/common/services/data.service.js"></script>
   <script src="app/common/services/authentication.service.js"></script>
-
+  <script src="app/common/services/authentication.service.js"></script>
 
 
 </body>
