adding a-z and z-a sorting

--- a/public/app/bookDisplay/search/bsSearchBook.html
+++ b/public/app/bookDisplay/search/bsSearchBook.html
@@ -1,4 +1,6 @@
 <form class="search-book" ng-submit="display.searchBook(newBook)" ng-show="display.isLoggedIn">
   <input class="book-search-box" [ng-value="{{newBook}}"] placeholder="Add Book" ng-model="newBook" name="bookTitle">
   <input class="book-search-submit" type="submit" value="🔎">
+
 </form>
+<!--<i class="fa fa-search" aria-hidden="true"></i>-->
