--- a/public/app/bookDisplay/userBooks.html
+++ b/public/app/bookDisplay/userBooks.html
@@ -5,7 +5,7 @@
 
   <bs-search-book></bs-search-book>
 
-  <div ng-click="display.sortTitleAZ()">Sort A - Z</div>
+  <bs-sort-options></bs-sort-options>
 
   <bs-display-books></bs-display-books>
 
