--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
   <script src="app/bookDisplay/directive/bsDisplayBooks.js"></script>
   <script src="app/bookDisplay/search/bsSearchBook.js"></script>
   <script src="app/bookDisplay/search-modal/bookModal.controller.js"></script>
+  <script src="app/bookDisplay/sorting/bsSortOptions.js"></script>
+  <script src="app/bookDisplay/sorting/sortOptions.controller.js"></script>
   <script src="app/components/monthly-books/bsMonthlyBooks.js"></script>
   <script src="app/components/total-books/bsTotalBooks.js"></script>
   <script src="app/components/num-users/bsNumUsers.js"></script>
